* fixed unnecessary overflow-x scrolling in mathjax formulas

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/rich-text.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/rich-text.scss
@@ -25,8 +25,8 @@
     align-items: center;
     display: inline-flex;
     max-width: 100%;
-    overflow-y: auto;
-    padding: 0.01em; // This prevents unnecessary scrollbars to be rendered
+    overflow-x: auto;
+    padding: 0.1em; // This prevents unnecessary scrollbars to be rendered
     vertical-align: middle;
   }
 
